force-app/main/default/objects/Nexa__c/Nexa__c.object-meta.xml
<CustomObject>
    <label>Nexa</label>
    <nameField>
        <label>Nexa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nexa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>