force-app/main/default/objects/Nexa__c/fields/Car_ID__c.field-meta.xml
<CustomField>
    <fullName>Car_ID__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Car ID</label>
    <type>AutoNumber</type>
</CustomField>