force-app/main/default/objects/Nexa__c/fields/Day_Profit__c.field-meta.xml
<CustomField>
    <fullName>Day_Profit__c</fullName>
    <label>Day Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>