force-app/main/default/objects/Nexa__c/fields/Discount_offered__c.field-meta.xml
<CustomField>
    <fullName>Discount_offered__c</fullName>
    <label>Discount offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>